root/libgo/go/cmd/go/testdata/src/syntaxerror/x.go
../../../../../../../../gcc/libgo/go/cmd/go/testdata/src/syntaxerror/x.go